--- a/index.html
+++ b/index.html
@@ -5,36 +5,82 @@
 <head>
 
     <link rel="stylesheet" href="style.css">
-    <title>ic-05</title>
+    <script src="main.js"></script>
+    <title>hw-05</title>
 </head>
 
 <body>
 
-<h1>Intro to JavaScript</h1>
+    <h1>hw-03: Interactive Webpage, and Marks & Channels</h1>
 
-<div>
+    <div id="primary-content">
+        <div class="flex-container">
+            <div class = "column" id=column1>
+                <img src="img/vis1.png">
+            </div>
+            <div class = "column" id="column2">
+                <button type="button" onClick="button1Clicked()">Reveal Marks and Channels</button>
 
-    <button type="button" onClick="buttonClicked()">Pls Click!</button>
+                <div id="button-1-div">
+                    <h1>Marks</h1>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <h1>Channels</h1>
+                    <ul>
+                        <li>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
 
-    <div id="button-div">
-        Number of times button clicked: 0
+                <button type="button" onClick="button2Clicked()">Reveal Colormap(s)</button>
+
+                <div id="button-2-div">
+                   <h1>Colormap(s)</h1>
+                   <ul>
+                    <li>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-</div>
 
+    <h1 class="header">Acknowledgements</h1>
 
-<script src="main.js"></script>
-        
+    <div id="resources">
+
+        <ul>
+
+            <li>https://css-tricks.com/snippets/css/a-guide-to-flexbox/</li>
+        </ul>
+    </div>
+
 </body>
-
-<h1 class="header">Acknowledgements</h1>
-
-  <div id="resources">
-
-    <ul>
-        
-        <li>https://www.w3schools.com/jsref/event_onclick.asp</li>
-    </ul>
-
-</div>
 
 </html>
