--- a/index.html
+++ b/index.html
@@ -13,61 +13,18 @@
 
     <h1>hw-03: Interactive Webpage, and Marks & Channels</h1>
 
-    <div id="primary-content">
-        <div class="flex-container">
-            <div class = "column" id=column1>
-                <img src="img/vis1.png">
-            </div>
-            <div class = "column" id="column2">
-                <button type="button" onClick="button1Clicked()">Reveal Marks and Channels</button>
+    <div class="flex-container">
+        <div class = "column" id=column1>
+            <img src="img/vis1.png">
+        </div>
+        <div class = "column" id="column2">
+            <button type="button" id="button1" onClick="button1Clicked()">Reveal Marks and Channels</button>
 
-                <div id="button-1-div">
-                    <h1>Marks</h1>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <h1>Channels</h1>
-                    <ul>
-                        <li>
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+            <div id="button-1-div"></div>
 
-                <button type="button" onClick="button2Clicked()">Reveal Colormap(s)</button>
+            <button type="button" id="button2" onClick="button2Clicked()">Reveal Colormap(s)</button>
 
-                <div id="button-2-div">
-                   <h1>Colormap(s)</h1>
-                   <ul>
-                    <li>
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            <div id="button-2-div"></div>
         </div>
     </div>
 
