--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>hw-03: Interactive Webpage, and Marks & Channels</h1>
+    <h1 class = 'header'>hw-03: Interactive Webpage, and Marks & Channels</h1>
 
     <div class="flex-container">
         <div class = "column" id=column1>
@@ -27,14 +27,29 @@
             <div id="button-2-div"></div>
         </div>
     </div>
+    <br>
+    <div class="flex-container">
+        <div class = "column" id=column3>
+            <img src="img/vis2.png">
+        </div>
+        <div class = "column" id="column4">
+            <button type="button" id="button3" onClick="button3Clicked()">Reveal Marks and Channels</button>
 
-    <h1 class="header">Acknowledgements</h1>
+            <div id="button-3-div"></div>
+
+            <button type="button" id="button4" onClick="button4Clicked()">Reveal Colormap(s)</button>
+
+            <div id="button-4-div"></div>
+        </div>
+    </div>
+
+    <br>
+
+    <h2 class="header">Acknowledgements</h2>
 
     <div id="resources">
-
         <ul>
-
-            <li>https://css-tricks.com/snippets/css/a-guide-to-flexbox/</li>
+            <li> <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">https://css-tricks.com/snippets/css/a-guide-to-flexbox/</a> </li>
         </ul>
     </div>
 
